# filter_choosing

./: README.md  SNR_all_nc.py  beamHardeningEstimation.py  beamHardeningSimulation.py  beam_hardening_simulation.py  extractData.py  extractMetadata.py  filterPerformance.py  filter_choosing_entrypoint.py  materialPropertiesData.py  pyproject.toml  resolutionAllNc.py  resolutionEstimation.py  resolution_all_nc.py  resolution_estimation.py  scatteringSimulation.py  snrAllNc.py  snrTest.py  snr_csv_reformat.py  snr_test.py  xrayImagingPerformance.py  xraySimulation.py  xray_imaging_performance.py  xray_simulation.py
.github/workflows/: build-filter-choosing-windows.yml
apps/: __init__.py
apps/filter_choosing/: __init__.py  engine.py  entrypoint.py  gui.py
automation/: extractData.py  qualityMeasures.py  unifyResultToSingleSpreadsheet.py
src/: beamHardeningSimulation.py  resolutionEstimation.py  scatteringSimulation.py
src/core/: __init__.py  beamHardeningSimulation.py  filterPerformance.py  materialPropertiesData.py  scatteringSimulation.py  snrTest.py  xraySimulation.py
usages/: haematite_porosity_kvp.py
