[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolution-estimation"
version = "0.1.0"
description = "Core tools and small apps for CT resolution/filter utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.4",
  "scipy<2",
  "xraydb",
  "spekpy",
  "scikit-image",
]

[project.optional-dependencies]
# Dependencies for the filter_choosing GUI app
filter_choosing = [
]

# Tools needed to build a Windows EXE
build = [
  "pyinstaller",
]

dev = [
  "pipreqs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
